# comp308_MAC_renderer

./: .gitignore  CMakeLists.txt  README.txt  RiverHandler.cpp  RiverHandler.h  VoronoiHandler.cpp  VoronoiHandler.h  vTriangle.cpp  vTriangle.h  vVertexPoint.cpp  vVertexPoint.h
demos/: dots.py  flow.py  geom.py  sample.py  scollads.py
res/shaders/: phongVert.vert  shaderDemo.frag  shaderDemo.vert
src/: CImg.h  CMakeLists.txt  RiverHandler.cpp  RiverHandler.h  VoronoiHandler.cpp  VoronoiHandler.h  cuan_define.h  define.h  field.cpp  field.h  geometry.cpp  grass.cpp  main.cpp  riverData.cpp  riverData.hpp  wave_generator.h
src/bluenoise/: geom.cpp  geom.hpp  sample.cpp  sample.hpp
work/ext/glew-1.10.0/: CMakeLists.txt
work/ext/glew-1.10.0/include/GL/: wglew.h
work/ext/stb/: CMakeLists.txt
work/res/shaders/: phongFrag.frag  phongFragOLD.frag  phongVert.vert  phongVertOLD.vert  shaderDemo.frag  shaderDemo.vert  skybox.frag  skybox.vert
work/res/textures/: simplebump.pgm
work/src/: CMakeLists.txt  RiverHandler.cpp  RiverHandler.h  RiverPoint.cpp  RiverPoint.h  RiverRenderer.cpp  RiverRenderer.hpp  VoronoiHandler.cpp  VoronoiHandler.h  cuan_define.h  define.h  field.cpp  field.h  geometry.cpp  geometry.hpp  grass.cpp  grass.h  grid.cpp  grid.h  main.cpp  simple_image.hpp  skybox.h  splineHandler.cpp  splineHandler.hpp  vEdge.cpp  vEdge.h  vTriangle.cpp  vTriangle.h  vVertexPoint.cpp  vVertexPoint.h
work/src/bluenoise/: geom.cpp  geom.hpp  sample.cpp  sample.hpp
